--- a/templates/suduku_puzzle.html
+++ b/templates/suduku_puzzle.html
@@ -3,9 +3,14 @@
 
 <head>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+  <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 </head>
 
+
+<body>
+
 <style>
+
 table { border-collapse: collapse; font-family: Calibri, sans-serif; }
 colgroup, tbody { border: solid medium; }
 td { border: solid thin; height: 2.8em; width: 10em; text-align: center; padding: 0; }
@@ -61,12 +66,45 @@ td { border: solid thin; height: 2.8em; width: 10em; text-align: center; padding
   background-color: #F08080;
 }
 
-
 .dropdown-content div:hover {background-color: #ddd;}
-/* .dropdown:hover .dropdown-content {display: block;} */
-/* .dropdown:hover .dropbtn {background-color: #3e8e41;} */
-</style>
 
+.success_banner_container{
+  border-radius: 25px;
+  height:20%;
+  width:75%;
+  background-color:#6699ff;
+  position:absolute;
+  margin:auto;
+}
+
+.success_banner_text{
+  font-family: 'Open Sans', sans-serif;
+  font-size: 50[];
+  text-align: center;
+  bottom:50%
+}
+
+.success_banner_top_line{
+  position:absolute;
+  border-radius: 25px;
+  background-color: black;
+  box-shadow: 0px 8px 16px 0px #666666;
+  width:100%;
+  height:5%;
+  top:0px;
+}
+
+.success_banner_bottom_line{
+  position:absolute;
+  border-radius: 25px;
+  background-color: black;
+  box-shadow: 0px 8px 16px 0px #666666;
+  width:100%;
+  height:5%;
+  bottom:0px;
+}
+
+</style>
 
 <div id="puzzle">
 <table>
@@ -107,8 +145,31 @@ td { border: solid thin; height: 2.8em; width: 10em; text-align: center; padding
 Check Solution!
 </button>
 
+<h1 id="check_result"></h1>
+
+
+<div class="success_banner_container">
+  <div class="success_banner_top_line"></div>
+  SUCCESS!!!
+  <div class="success_banner_bottom_line"></div>
+</div>
+
 
 <script>
+function check_solution(){
+  var r = "True"
+  var solution = {{solver.solution}}
+  for(let i = 0; i<81; i++){
+    var solutionVal = solution[i];
+    if(parseInt(document.getElementById(`cell_${i}`).innerHTML) != solutionVal){
+      if(!document.getElementById(`dropbtn${i}`).classList.contains("incorrect_value_background")){
+        document.getElementById(`dropbtn${i}`).classList.toggle("incorrect_value_background");
+      }
+    }
+  }
+  docment.getElementById("check_result").innerHTML = r;
+}
+
 function setNumber(id){
   document.getElementById("dropdown" + id).classList.toggle("show");
 
@@ -147,7 +208,9 @@ for(let i = 0; i<81; i++){
     });
   });
 }
+
 </script>
 
+</body>
 
 </html5>
