--- a/templates/suduku_puzzle.html
+++ b/templates/suduku_puzzle.html
@@ -16,6 +16,20 @@ colgroup, tbody { border: solid medium; }
 td { border: solid thin; height: 2.8em; width: 10em; text-align: center; padding: 0; }
 #puzzle{ margin: auto; width:75%;}
 
+#overlay {
+  position: fixed;
+  display: none;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: rgba(0,0,0,0.35);
+  z-index: 2;
+  cursor: pointer;
+}
+
 .cell_text{
   color:black;
 }
@@ -68,20 +82,31 @@ td { border: solid thin; height: 2.8em; width: 10em; text-align: center; padding
 
 .dropdown-content div:hover {background-color: #ddd;}
 
+.visible{
+  visibility: hidden;
+}
+
 .success_banner_container{
   border-radius: 25px;
   height:20%;
-  width:75%;
+  width:80%;
   background-color:#6699ff;
   position:absolute;
-  margin:auto;
+  top:16%;
+  left:10%;
+  z-index: 3;
 }
 
 .success_banner_text{
   font-family: 'Open Sans', sans-serif;
-  font-size: 50[];
+  font-size: 50px;
+  font-weight: bold;
   text-align: center;
-  bottom:50%
+  position: relative;
+  top: 50%;
+  -ms-transform: translateY(-50%);
+  -webkit-transform: translateY(-50%);
+  transform: translateY(-50%);
 }
 
 .success_banner_top_line{
@@ -103,8 +128,9 @@ td { border: solid thin; height: 2.8em; width: 10em; text-align: center; padding
   height:5%;
   bottom:0px;
 }
-
 </style>
+
+<div id="overlay"></div>
 
 <div id="puzzle">
 <table>
@@ -145,29 +171,30 @@ td { border: solid thin; height: 2.8em; width: 10em; text-align: center; padding
 Check Solution!
 </button>
 
-<h1 id="check_result"></h1>
-
-
-<div class="success_banner_container">
+<div class="success_banner_container visible" id="success_banner">
   <div class="success_banner_top_line"></div>
-  SUCCESS!!!
+    <div class="success_banner_text">SUCCESS!!!</div>
   <div class="success_banner_bottom_line"></div>
 </div>
 
 
 <script>
 function check_solution(){
-  var r = "True"
-  var solution = {{solver.solution}}
+  var solution = {{solver.solution}};
+  var r = 1;
   for(let i = 0; i<81; i++){
     var solutionVal = solution[i];
     if(parseInt(document.getElementById(`cell_${i}`).innerHTML) != solutionVal){
       if(!document.getElementById(`dropbtn${i}`).classList.contains("incorrect_value_background")){
         document.getElementById(`dropbtn${i}`).classList.toggle("incorrect_value_background");
       }
+      r = 0;
     }
   }
-  docment.getElementById("check_result").innerHTML = r;
+  if(r==1){
+      document.getElementById("overlay").style.display = "block";
+      document.getElementById("success_banner").classList.toggle("visible");
+  }
 }
 
 function setNumber(id){
